Fixed image widget alignment

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -885,10 +885,6 @@
 
 
 .imagewidget {
-    .image-link {
-        display: block;
-        text-align: center;
-    }
     .caption {
         position: relative;
         width: 65%;
